--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Menoe Grotesque Pro</title>
     <link rel="stylesheet" href="stylesheets/reset.css" />
     <link rel="stylesheet" href="stylesheets/style.css" />
+    <link rel="stylesheet" href="stylesheets/font.css" />
     <link rel="stylesheet" href="stylesheets/layout.css" />
   </head>
   <body>
