--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="stylesheets/style.css" />
     <link rel="stylesheet" href="stylesheets/font.css" />
     <link rel="stylesheet" href="stylesheets/layout.css" />
+    <link rel="icon" href="/images/favicon.png" type="image/png" />
   </head>
   <body>
     <section class="firstSection">
@@ -34,11 +35,15 @@
     <section class="thirdSection">
       <div class="first1"><p>2 начертания</p></div>
       <div class="black"></div>
-      <div class="second3"><img src="images/snake.svg" alt="" /></div>
-      <div class="second4"><img src="images/snake.svg" alt="" /></div>
+      <div class="second3">
+        <img src="images/snake.svg" alt="змея, обхватывающая кубок" />
+      </div>
+      <div class="second4">
+        <img src="images/snake.svg" alt="змея, обхватывающая кубок" />
+      </div>
       <div class="black"></div>
       <div class="third1"><p>OpenType</p></div>
-      <div class="arms"><img src="images/arms.svg" alt="" /></div>
+      <div class="arms"><img src="images/arms.svg" alt="ручки дверей" /></div>
     </section>
     <section class="forthSection">
       <div>
@@ -46,67 +51,45 @@
       </div>
     </section>
     <section class="fifthSection">
-      <div>
+      <div class="car1">
         <p>
           На создание шрифта Menoe Grotesque <br />Адама вдохновила старая
           пишущая <br />машинка «Континенталь».
         </p>
-        <img src="images/carroad.svg" alt="" />
-
+      </div>
+      <div class="car2">
         <p>
           Он подробно изучил её шрифт <br />с засечками и затем разработал
           <br />свою версию — без засечек, <br />в остальном ориентируясь на
           традицию <br />шрифтов для пишущих машинок.
         </p>
       </div>
+      <div class="car">
+        <img src="images/carroad.svg" alt="скорая помощь" />
+      </div>
     </section>
     <section class="sixthSection">
       <h1>НАЧЕРТАНИЯ</h1>
-      <div class="pills1">
-        <p>May Cause Dizziness</p>
-        <p>
-          You Should Avoid Prolonged <br />Or Exessive Exposure To <br />Direct
-          And/Or Artificial <br />Sunlight While Taking This <br />Medicine
-        </p>
-        <p>OVAL WHITE TABLET <br />Side 1: <br />Side 2: Elizabeth Cooper</p>
-      </div>
-      <img src="images/pills.svg" alt="" />
-      <!-- <div class="pills2">
-        <p>May Cause Dizziness</p>
-        <h2>Regular</h2>
-        <p>OVAL WHITE TABLET Side 1: Side 2: Elizabeth Cooper</p>
-      </div>
-      <div class="pills3">
-        <p>May Cause Dizziness</p>
-        <h2>Italic</h2>
-        <p>OVAL WHITE TABLET Side 1: Side 2: Elizabeth Cooper</p>
-      </div>
-      <div class="pills4">
-        <p>May Cause Dizziness</p>
-        <p>
-          You Should Avoid Prolonged Or Exessive Exposure To Direct And/Or
-          Artificial Sunlight While Taking This Medicine
-        </p>
-        <p>OVAL WHITE TABLET Side 1: Side 2: Elizabeth Cooper</p>
-      </div> -->
     </section>
     <section class="sevenSection">
       <h2>СТАНЬ ДОНОРОМ</h2>
-      <div class="line"><img src="images/line.svg" alt="" /></div>
+      <div class="line"><img src="images/line.svg" alt="линейка" /></div>
       <p>
         Это моноширинный шрифт: любой символ <br />шрифта Menoe Grotesque вписан
         <br />в кегельную площадку стандартной <br />ширины, что делает его
         идеально <br />подходящим для вёрстки колонок <br />или
         программирования.
       </p>
-      <div class="blood"><img src="images/blood.svg" alt="" /></div>
+      <div class="blood">
+        <img src="images/blood.svg" alt=" туба с кровью" />
+      </div>
     </section>
     <section class="eightSection">
       <h1>ДЕТАЛИ</h1>
     </section>
     <section class="nineSection">
       <div><h1>ГЛИФЫ</h1></div>
-      <img src="images/tablets.svg" alt="" />
+      <img src="images/tablets.svg" alt="таблетки" />
       <div></div>
     </section>
     <section class="tenSection">
@@ -123,7 +106,7 @@
       </div>
     </section>
     <section class="elevenSection">
-      <img src="images/tabloid.svg" alt="" />
+      <img src="images/tabloid.svg" alt="табличка на двери" />
       <div><h1>86 ЯЗЫКОВ</h1></div>
       <div class="lang1">
         <p>БУДЬ ЗДОРОВ! <br />god bless you <br />Здоровенькi були</p>
@@ -140,7 +123,7 @@
           <p>30 ml. concentrated</p>
           <p>Chloropropylate <br />miltcide</p>
         </div>
-        <img src="images/bottle1.svg" alt="" />
+        <img src="images/bottle1.svg" alt="бутылек" />
       </div>
       <div class="spray1">
         <div class="spray">
@@ -148,25 +131,25 @@
           <p>Aspecton</p>
           <p>20 mg.</p>
         </div>
-        <img src="images/spray.svg" alt="" />
+        <img src="images/spray.svg" alt="спрей для носа" />
       </div>
       <div class="cough1">
         <div class="cough">
           <p>STREPSILS <br />plus</p>
           <p>Anti-cough <br />30 ml.</p>
         </div>
-        <img src="images/spray2.svg" alt="" />
+        <img src="images/spray2.svg" alt="спрей от кашля" />
       </div>
       <div class="bar1">
         <div class="bar">
           <p>плитка <br />40 г</p>
           <p>ГЕМАТОГЕН</p>
         </div>
-        <img src="images/bar.svg" alt="" />
+        <img src="images/bar.svg" alt="гематоген" />
       </div>
     </section>
     <section class="thirtSection">
-      <img src="images/recipe2.png" alt="" />
+      <img src="images/recipe2.png" alt="лист бумаги с лого" />
       <div class="left">
         <p>Министерство здравоохранения <br />Российской Федерации</p>
         <p>Наименование(штамп) <br />медицинской организации</p>
