--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="stylesheets/style.css" />
     <link rel="stylesheet" href="stylesheets/font.css" />
     <link rel="stylesheet" href="stylesheets/layout.css" />
-    <link rel="icon" href="/images/favicon.png" type="image/png" />
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
+    <link type="images" href="images/favicon.png" rel="icon" />
   </head>
   <body>
     <section class="firstSection">
